Fixed 'When the user rolls over the 4 navigation buttons (Industrial, Office, etc.) the text (construction, general labor, special projects) specific to each button should be visible' from email on 11/11.

--- a/css/altres.css
+++ b/css/altres.css
@@ -314,6 +314,10 @@ body.not-front #primary-links a, body.not-front #primary-links a:link, body.not-
 	background-image: url(../images/staffing/staffing-hover-bg.png);
 }
 
+#primary-links a:hover span, #primary-links a:focus span, #primary-links a:active span, #primary-links a.active span {
+	display: block;
+}
+
 #primary-links ul.links {
 	margin: 0;
 	position: relative;
